# FhirAgentEvaluator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  output.json  pyproject.toml  sample.env  scenario.toml
data/: all_tasks.csv  drug_interaction_dataset_final_refined.csv  drug_interaction_tasks.csv  fhiragentbench_tasks.csv  medagentbench_tasks.csv  test.csv
launcher/: client.py  client_cli.py
src/: agent.py  executor.py  messenger.py  server.py
src/common/: eval_metrics.py  evaluation.py  fhir_client.py  models.py  prompt_builder.py  task_loader.py
src/fhir_mcp/: __init__.py  server.py  utils.py
src/fhir_mcp/tools/: __init__.py  drug_interactions.py  drug_labels.py  fhir_tools.py  medical_codes.py  python_executor.py
src/fhir_mcp/tools/codes_dataset/: d_items.csv  d_labitems.csv
